--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Yankee Themes</title>
+<title>Yankee Themes - One Page HTML Template</title>
 <meta name="" content="">
 <link href='css/font-awesome/css/font-awesome.min.css' rel='stylesheet' type='text/css'/>
 <link href='https://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
